--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <link rel="stylesheet" type="text/css" href="colorgame.css">
   </head>
   <body>
-    <h1>The Great <span id="colorDisplay"></span> Color Game</h1>
+    <h1>The Great 
+      <br>
+      <span id="colorDisplay"></span> 
+      <br>
+      Color Game</h1>
 
     <div id="stripe">
       <button id="resetButton">New Colors</button>
       <span id="messageDisplay"></span>
-      <button id="easyBtn">Easy</button>
-      <button id="hardBtn">Hard</button>
+      <button class="mode">Easy</button>
+      <button class="mode selected">Hard</button>
     </div>
 
 
